--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,6 @@
     </style>
 </head>
 <body class="pushable">
-    <div id="topMenu">
-    <div id=""></div>
-    <div id=""></div>
-    <div id=""></div>
-    <div id=""></div>
-    <div id=""></div>
-    <div id=""></div>
-    </div>
+    <div id="root">
 </body>
 </html>
